    * Proper margin on address. [OFB]
    * Unwanted bottom margin on nested lists. [OFB]
    * Form labels with unwanted fancy-type indentation. [OFB]
    * Proper margin on all form elements. [OFB]
    * No margins for images in headings. [OFB]
    * Push-x bottom margin. [OFB]
    * Vertical align set to middle on tables. [OFB]
    * Improved .notice, .error and .success color contrast. [OFB]
  
  Misc:
    * Increased default font size to 80% (13px). [OFB]
    * Improved structure in print.css. [OFB]
    * Dual-licensed under MIT and GPL licenses. [OFB]
    * Changed name of .clear to .clearfix, and added .clear (clear:both;). [OFB]


Version 0.6 - 21/9/2007
--
  * Created a new plugin, "iepngfix", that adds support for PNG transparency in IE5.5+ [OFB]
  * Added an IE stylesheet, updated the test files and the readme accordingly [OFB]
  * Re-added improved support for em units [OFB]
  * Lots of minor changes to typography.css and reset.css, provided by Christian Montoya [OFB]
  * Extracted the fancy typography section in typography.css to a new plugin [OFB]
  * Extracted the support for CSS buttons into a new plugin. [OFB]
  * Added new plugin structure. [OFB]
  * Changed some default fonts so that BP works better with ClearType in XP [OFB]
  * Re-added the hack for clearing floats without extra markup. [OFB]
  * Added Changelog.txt to track changes in each release. [GR]
  * Cleaned up and rationalized SVN dir structure. [GR, OFB]
  * print.css : removed reference to 'baseline.png' as it no longer exists. [GR]
  * grid.css : removed reference to '.first' css class as it no longer exists. [GR]
  * Added append-13 to append-23 and prepend-13 to prepend-23 to allow pushing elements
    to both extreme sides of the grid. Added test cases to tests/grid.css [GR]
  * Moved test sample files to blueprint/tests sub-directory so tests stay with the code. [GR]
  * Consolidated all references to release version number to screen.css [OFB]