@@ -29,10 +29,9 @@ textarea:focus, select:focus {
 }
 
 input.text, 
-input.title   { width: 220px; padding:5px; }
+input.title   { width: 300px; padding:5px; }
 input.title   { font-size:1.5em; }
 textarea      { width: 390px; height: 250px; padding:5px; }
-select        { width:220px; }
 
 
 /* Success, notice and error boxes
