@@ -19,8 +19,15 @@
   width: 950px;
   margin: 0 auto;
 }
+
+/* Use this class on any div.span / container to see the grid. */
 .showgrid { 
   background: url(src/grid.png); 
+}
+
+/* Body margin for a sensile default look. */
+body {
+  margin:1.5em 0;	
 }
 
 
