@@ -10,6 +10,7 @@
 body { 
   font-size: 75%;
   color: #222; 
+  background: #fff;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
@@ -22,7 +23,7 @@ h1,h2,h3,h4,h5,h6 { font-weight: normal; color: #111; }
 h1 { font-size: 3em; line-height: 1; margin-bottom: 0.5em; }
 h2 { font-size: 2em; margin-bottom: 0.75em; }
 h3 { font-size: 1.5em; line-height: 1; margin-bottom: 1em; }
-h4 { font-size: 1.2em; line-height: 1.25; margin-bottom: 1.25em; }
+h4 { font-size: 1.2em; line-height: 1.25; margin-bottom: 1.25em; height: 1.25em; }
 h5 { font-size: 1em; font-weight: bold; margin-bottom: 1.5em; }
 h6 { font-size: 1em; font-weight: bold; }
 
@@ -84,9 +85,6 @@ tr.even td  { background: #E5ECF9; }
 tfoot       { font-style: italic; }
 caption     { background: #eee; }
 
-/* Use this if you use span-x classes on th/td. */
-table .last { padding-right: 0; } 
-
 
 /* Misc classes
 -------------------------------------------------------------- */
@@ -101,5 +99,7 @@ table .last { padding-right: 0; }
 .added      { background:#060; color: #fff; }
 .removed    { background:#900; color: #fff; }
 
+.first			{ margin-left:0; padding-left:0; }
+.last				{ margin-right:0; padding-left:0; }
 .top        { margin-top:0; padding-top:0; }
 .bottom     { margin-bottom:0; padding-bottom:0; }
